--- a/index.html
+++ b/index.html
@@ -31,61 +31,52 @@
 
 <body>
     <!-- p5.js imports for tree -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script> -->
-    <div class="grid_container">
-        <!-- About -->
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
+    <div id="sketch-container" class="fade_out"></div>
+    <!-- Text -->
+    <div id="grid_container" class="grid_container fade_in_page">
         <div class="grid_item ">
             <h1>Thanks for stopping by.</h1>
             <h6>My name is Al Miller (III).</h6>
-            <p>I am a software engineer passionate about sustainability, working at a consulting
-                <a href="https://www.mpr.com">firm</a> in the energy sector based in Washington D.C. Our team
+            <p>I am a software engineer passionate about sustainability, working at a
+                <a href="https://www.mpr.com">consulting firm</a> in the energy sector based in Washington D.C. Our team
                 supports our client's initiatives towards a more sustainable energy future.
             </p>
             <p>
                 My primary interests are at the intersection of sustainability, philosophy, and technology. To that
-                end, I have most recently been working on <a href="https://contours.co">contours.co</a>, an image
-                processing pipeline for computer vision requests.                Otherwise, I have been working on <a
-                href="https://www.github.com/ANMillerIII/ol-weighted-overlay.git">ol-weighted-overlay</a> - a tidy
-            raster operation/weighted overlay analysis tool for the FOSS GIS suite OpenLayers.
-            </p>
-
-            <p>
-                Outside of creating I enjoy being out on <a href="https://www.youtube.com/watch?v=ai6nz2hmtW8&ab_channel=AlMiller">trail</a>, learning piano works by Maurice Ravel, and spending time with my girlfriend Perrin.                Communities I am involved in include <a href="https://lesswrong.org">Less Wrong</a> and <a
-                href="https://workonclimate.org" target="_blank">Work on Climate</a>.
+                end, I have been building <nobr><a href="https://contours.co">contours.co</a>,</nobr> a streamlined
+                satellite image pre-processing API for computer vision requests in OpenCV with React and AWS to simplify
+                LiDAR data processing at scale.
             </p>
             <p>
-
-
-                    
+                Outside of creating I enjoy being out on
+                <a href="https://www.youtube.com/watch?v=ai6nz2hmtW8&ab_channel=AlMiller">trail</a>, learning piano
+                works by Maurice Ravel, and spending time with my girlfriend Perrin. Communities that I am
+                interested/involved in include <nobr><a href="https://workonclimate.org" target="_blank"><span>Work on
+                            Climate</span></a></nobr> and <nobr><a href="https://lesswrong.com">Less Wrong</a>.</nobr>
             </p>
             <p>
-                Do please <a href="mailto:albert.miller@uconn.edu" target="_blank">reach out!</a> - I am always excited to connect.
+                Do please <a href="mailto:albert.miller@uconn.edu" target="_blank">reach out!</a>
             </p>
         </div>
-
         <!-- Contact links -->
         <div class="grid_item" id="contact_links">
+            <a href="mailto:albert.miller@uconn.edu" target="_blank">
+                <i class="material-icons icon">&#xe0e1;</i>
+            </a>
+            <a href="./static/assets/anm_resume.pdf" target="_blank" download="anm_resume">
+                <i class="far fa-file-pdf-o icon"></i>
+            </a>
             <a href="https://www.linkedin.com/in/al-miller/" target="_blank">
                 <i class="fab fa-linkedin-in icon"></i>
             </a>
             <a href="https://www.github.com/ANMillerIII/" target="_blank">
                 <i class="fab fa-github icon"></i>
             </a>
-            <a href="../static/assets/resume/resume_am.pdf') }}" target="_blank" download="resume_am">
-                <i class="far fa-file-pdf-o icon"></i>
-            </a>
-            <a href="mailto:albert.miller@uconn.edu" target="_blank">
-                <i class="material-icons icon">&#xe0e1;</i>
-            </a>
         </div>
-
     </div>
-    <!-- p5.js sketch -->
-    <!-- <div class="grid_item">
-                    <div id="sketch-container"></div>
-                </div> -->
-    <!-- local JS imports for tree and modal -->
-    <!-- <script src="./static/js/main.js" defer></script> -->
+    <!-- Local JS import for tree -->
+    <script src="./static/js/main.js" defer></script>
 </body>
 
 </html>
