--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <a href="mailto:albert.miller@uconn.edu" target="_blank">
                 <i class="material-icons icon">&#xe0e1;</i>
             </a>
-            <a href="./static/assets/anm_resume.pdf" target="_blank" download="anm_resume">
+            <a href="./static/assets/Resume_ANM.pdf" target="_blank" download="Resume_ANM">
                 <i class="far fa-file-pdf-o icon"></i>
             </a>
             <a href="https://www.linkedin.com/in/al-miller/" target="_blank">
