--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
       auto2top: true,
       subMaxLevel: 1,
       coverpage: true,
+      sidebarDisplayLevel: 3,
       themeable: {
         readyTransition: false,
         responsiveTables: true
@@ -49,6 +50,8 @@
   <script src="//unpkg.com/docsify-plugin-toc"></script>
   <script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/js/docsify-themeable.min.js"></script>
   <script src="./static/plugins/toggleTheme.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
+
 </body>
 
 </html>
