--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Al Miller</title>
-  <!-- Custom styles -->
+  <title>deconstruction</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-defaults.css"
     title="light">
   <link rel="stylesheet" href="./static/css/styles.css">
-  <!-- Contact links (FA and Material icons) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Rubik:300,500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -23,7 +21,7 @@
   <script>
     window.$docsify = {
       homepage: 'about.md',
-      name: 'Al Miller',
+      name: 'deconstruction',
       routerMode: 'history',
       repo: '',
       onlyCover: false,
@@ -42,15 +40,15 @@
       },
       search: {
         placeholder: 'Search'
-      },
+      }
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
-  <!-- <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script> -->
-  <script src="//unpkg.com/docsify-plugin-toc"></script>
   <script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/js/docsify-themeable.min.js"></script>
-  <script src="./static/plugins/toggleTheme.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
+  <script src="//unpkg.com/docsify-plugin-toc"></script>
+  <!-- <script src="./static/plugins/toggleTheme.js"></script> -->
+  <!-- <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script> -->
 
 </body>
 
