--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
   <script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/js/docsify-themeable.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
   <script src="//unpkg.com/docsify-plugin-toc"></script>
-  <!-- <script src="./static/plugins/toggleTheme.js"></script> -->
+  <script src="./static/plugins/toggleTheme.js"></script>
   <!-- <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script> -->
 
 </body>
