fixed dark toggle

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>deconstruction</title>
+  <title>Al Miller</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-defaults.css"
     title="light">
   <link rel="stylesheet" href="./static/css/styles.css">
@@ -21,7 +21,7 @@
   <script>
     window.$docsify = {
       homepage: 'about.md',
-      name: 'deconstruction',
+      name: 'Al Miller',
       routerMode: 'history',
       repo: '',
       onlyCover: false,
