--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
       name: 'Al Miller',
       routerMode: 'history',
       repo: '',
+      notFoundPage: true,
       onlyCover: false,
       loadSidebar: true,
       auto2top: true,
